syntax = "proto3";

message TextInputType {
    string label = 1;
    string on_click_handler_id = 2;
}
